# stock-app

./: .gitignore  Makefile  README.md  docker-compose.yaml
.jobsity-files/: README.md
api/: .dockerignore  Makefile  alembic.ini  manage.py  pyproject.toml
api/conf/: __init__.py  base.py  development.py  production.py  staging.py  testing.py
api/docker/staging/: Dockerfile  staging.env  startup.sh
api/docker/testing/: Dockerfile  testing.env
api/shared/: types.py  utils.py
api/src/application/: exceptions.py  ports.py  services.py
api/src/domain/models/: __init__.py  base.py  stocks.py  users.py
api/src/infra/db/: __init__.py  adapter.py  db.py
api/src/infra/db/migrations/: env.py  script.py.mako
api/src/infra/db/migrations/versions/: 2025_01_27_1943-7ec75b733864_initial_migration.py
api/src/infra/proxy/: __init__.py  adapter.py
api/src/infra/repository/: stocks.py  users.py
api/src/interface/api/graphql/: __init__.py
api/src/interface/api/grpc/: __init__.py
api/src/interface/api/http/fastapi/: __init__.py
api/src/interface/api/http/flask/: asgi.py  controllers.py  handlers.py  routers.py
api/src/interface/cli/: __init__.py  commands.py
api/tests/: conftest.py
api/tests/unit/application/: conftest.py  test_services.py
proxy/: Dockerfile  Makefile  main.py  pyproject.toml
